[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/shapes/tiny_circle.png" type="Texture" id=1]
[ext_resource path="res://interface elements/button/button.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/mini-wakuwaku.otf" type="DynamicFontData" id=3]
[ext_resource path="res://interface elements/shared_sounds/up.wav" type="AudioStream" id=4]
[ext_resource path="res://interface elements/shared_sounds/down.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 3 )

[node name="button" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
text = "my name is a button"
up_color = Color( 0.380392, 0.831373, 0.364706, 1 )
down_color = Color( 0, 0.0392157, 1, 1 )
release_color = Color( 1, 0, 0.796078, 1 )
vertical_travel = 10
button_lerp_down = 30
button_base_scale = 1.0
down_squish = 0.75
release_fade = 0.1

[node name="base" type="NinePatchRect" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="NinePatchRect" parent="base"]
self_modulate = Color( 0.501961, 1, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = -15.0
margin_right = -21.0
margin_bottom = -32.0
texture = ExtResource( 1 )
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="base/top"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 7.0
margin_right = -1.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "poke"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="base/top"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.735107
margin_top = -5.0
margin_right = -0.735107
margin_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "poke"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickDetector" type="Control" parent="base/top"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 8.0
margin_bottom = 17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="base/top/ClickDetector"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.435294 )

[node name="upclick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -13.126

[node name="downclick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -13.126
[connection signal="mouse_entered" from="base/top/ClickDetector" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="base/top/ClickDetector" to="." method="_on_mouse_exited"]
